[tool.poetry]
name = "stockbot"
version = "0.1.0"
description = "This repository sync a dataset based on a fixed window from yfinance. The tensor and RL model can be replaced with this template."
authors = ["Satesh Ramdhani <satesh.ramdhani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "2.0.3"
yfinance = "^0.2.31"
tqdm = "^4.66.1"
tensorly = "0.8.1"
scipy = "1.11.1"
gym = "^0.26.2"
numpy = "1.24.3"
tensorflow = "2.13.0"
scikit-learn = "^1.3.1"
iexfinance = "^0.5.0"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
keras = "2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
